# entropix_103024

./: .gitignore  pyproject.toml  verify_model.py
entropix/: config.py  distributed_types.py  model_tests.py  run_distributed.sh  setup_gpu.sh  torch_downloadweights.py  torch_kvcache.py  torch_main.py  torch_model.py  torch_weights.py
entropix/data/: MedQA_Test_Partial.jsonl  prompts.csv
