[tool.poetry]
name = "entropix"
version = "0.1.0"
description = ""
authors = ["_xjdr","Cole-Tulip"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
# Install torch first
torch = { version = "2.3.1+cu118", source = "pytorch" }
torchvision = { version = "0.18.1+cu118", source = "pytorch" }
# Then numpy and other dependencies
numpy = ">=2.1.0"
ml-dtypes = "0.5.0"
jaxlib = "0.4.34"
jax = "0.4.35"
flax = "0.9.0"
chex = "0.1.87"
transformers = "4.46.2"
accelerate = "0.26.1"
optax = "*"
tensorstore = "*"
orbax-checkpoint = "*"
blobfile = "3.0.0"
tyro = "0.8.14"
pydantic = "2.9.2"
pytest = "8.3.3"
ruff = "0.6.9"
tiktoken = "0.4.0"
rich = "13.9.4"
huggingface-hub = "0.25.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.2"
transformers = "^4.45.1"
huggingface-hub = {extras = ["cli"], version = "^0.25.1"}

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = ["tests/**"]
lint.select = [
  "E",
  "F",
  "UP",
  "B",
  "SIM",
  "I",
  "RUF",
]
lint.ignore = [
  "E501",
  "SIM117",
]
line-length = 88
indent-width = 2